public enum SlotEquipo {
    ARMA,
    CABEZA,
    CUERPO,
    PIES
}
