public enum TipoArmadura {
    CABEZA,
    CUERPO,
    PIES
}